--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -100,6 +100,7 @@ ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 dtbo-$(CONFIG_ARCH_LAGOON) += \
 		lagoon-rumi-overlay.dtbo \
 		lagoon-mtp-overlay.dtbo \
+                gauguin-sm6350-overlay.dtbo \
 		lagoon-mtp-usbc-overlay.dtbo \
 		lagoon-cdp-overlay.dtbo \
 		lagoon-atp-overlay.dtbo \
@@ -108,6 +109,7 @@ dtbo-$(CONFIG_ARCH_LAGOON) += \
 lagoon-rumi-overlay.dtbo-base := lagoon.dtb
 lagoon-mtp-overlay.dtbo-base := lagoon.dtb
 lagoon-mtp-usbc-overlay.dtbo-base := lagoon.dtb
+gauguin-sm6350-overlay.dtbo-base := lagoon.dtb
 lagoon-cdp-overlay.dtbo-base := lagoon.dtb
 lagoon-atp-overlay.dtbo-base := lagoon.dtb
 lagoon-qrd-overlay.dtbo-base := lagoon.dtb
@@ -116,6 +118,7 @@ dtb-$(CONFIG_ARCH_LAGOON) += \
 		lagoon-rumi.dtb \
 		lagoon-mtp.dtb \
 		lagoon-mtp-usbc.dtb \
+                gauguin-sm6350.dtb \
 		lagoon-cdp.dtb \
 		lagoon-atp.dtb \
 		lagoon-qrd.dtb
