--- a/qcom/lagoon-qrd.dtsi
+++ b/qcom/lagoon-qrd.dtsi
@@ -184,7 +184,7 @@
 	qcom,dsi-default-panel = <&dsi_r66451_amoled_120hz_video>;
 };
 
-&qupv3_se0_i2c {
+/*&qupv3_se0_i2c {
 	status = "ok";
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -207,7 +207,7 @@
 		pinctrl-1 = <&nfc_int_suspend &nfc_enable_suspend
 				&nfc_clk_req_suspend>;
 	};
-};
+};*/
 
 &pm7250b_charger {
 	status = "ok";
