--- a/qcom/lagoon-thermal.dtsi
+++ b/qcom/lagoon-thermal.dtsi
@@ -999,7 +999,7 @@
 		};
 	};
 
-	conn-therm-usr {
+	conn_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1014,7 +1014,22 @@
 		};
 	};
 
-	sdm-skin-therm-usr {
+	backlight_therm {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-governor = "user_space";
+		thermal-sensors = <&pm7250b_adc_tm ADC_GPIO2_PU2>;
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	msm_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1029,7 +1044,7 @@
 		};
 	};
 
-	rfc-cam-pa3-usr {
+	wifi_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1044,7 +1059,7 @@
 		};
 	};
 
-	camera-therm-usr {
+	flash_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1059,7 +1074,7 @@
 		};
 	};
 
-	quiet-therm-usr {
+	quiet_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1074,7 +1089,23 @@
 		};
 	};
 
-	pa-therm0-usr {
+	cam_therm1 {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-governor = "user_space";
+		thermal-sensors = <&pm6150l_adc_tm_iio ADC_GPIO1_PU2>;
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+
+	5G_pa_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1089,7 +1120,7 @@
 		};
 	};
 
-	pa-therm1-usr {
+	4G_pa_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1104,7 +1135,7 @@
 		};
 	};
 
-	xo-therm-usr {
+	xo_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-governor = "user_space";
@@ -1241,198 +1272,6 @@
 			lmh_cpu6_cdev {
 				trip = <&min_temp_1_lowc>;
 				cooling-device = <&lmh_cpu_vdd1 1 1>;
-			};
-		};
-	};
-
-	quiet-therm-step {
-		polling-delay-passive = <2000>;
-		polling-delay = <0>;
-		thermal-governor = "step_wise";
-		thermal-sensors = <&pm6150l_adc_tm ADC_GPIO4_PU2>;
-		wake-capable-sensor;
-
-		trips {
-			modem_skin_trip0: modem-skin-trip0 {
-				temperature = <40000>;
-				hysteresis = <4000>;
-				type = "passive";
-			};
-
-			modem_skin_trip1: modem-skin-trip1 {
-				temperature = <41000>;
-				hysteresis = <4000>;
-				type = "passive";
-			};
-
-			skin_batt_trip0: batt-skin-trip0 {
-				temperature = <41000>;
-				hysteresis = <2000>;
-				type = "passive";
-			};
-
-			modem_skin_trip2: modem-skin-trip2 {
-				temperature = <42000>;
-				hysteresis = <4000>;
-				type = "passive";
-			};
-
-			gold_trip: gold-trip {
-				temperature = <43000>;
-				hysteresis = <0>;
-				type = "passive";
-			};
-
-			skin_batt_modem_trip: batt-modem-skin-trip {
-				temperature = <43000>;
-				hysteresis = <4000>;
-				type = "passive";
-			};
-
-			skin_batt_trip2: batt-skin-trip2 {
-				temperature = <45000>;
-				hysteresis = <2000>;
-				type = "passive";
-			};
-
-			gpu_skin_trip: gpu-skin-trip {
-				temperature = <45000>;
-				hysteresis = <3000>;
-				type = "passive";
-			};
-
-			skin_batt_trip3: batt-skin-trip3 {
-				temperature = <47000>;
-				hysteresis = <2000>;
-				type = "passive";
-			};
-
-			silver_trip: silver-trip {
-				temperature = <48000>;
-				hysteresis = <0>;
-				type = "passive";
-			};
-
-			skin_batt_trip4: batt-skin-trip4 {
-				temperature = <48000>;
-				hysteresis = <1000>;
-				type = "passive";
-			};
-
-			cx_emer_trip: cx-emer-trip {
-				temperature = <50000>;
-				hysteresis = <4000>;
-				type = "passive";
-			};
-		};
-
-		cooling-maps {
-			skin_cpu6 {
-				trip = <&gold_trip>;
-					/* throttle from fmax to 1555200KHz */
-				cooling-device = <&CPU6 THERMAL_NO_LIMIT
-							(THERMAL_MAX_LIMIT-6)>;
-			};
-
-			skin_cpu0 {
-				trip = <&silver_trip>;
-					/* throttle from fmax to 1516800KHz */
-				cooling-device = <&CPU0 THERMAL_NO_LIMIT
-							(THERMAL_MAX_LIMIT-6)>;
-			};
-
-			skin_gpu {
-				trip = <&gpu_skin_trip>;
-					/* throttle to 650000000Hz */
-				cooling-device = <&msm_gpu (THERMAL_MAX_LIMIT-4)
-						(THERMAL_MAX_LIMIT-4)>;
-			};
-
-			skin_gpu_emrg {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&msm_gpu (THERMAL_MAX_LIMIT-2)
-							(THERMAL_MAX_LIMIT-2)>;
-			};
-
-			skin_cdsp {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&cdsp_sw 4 4>;
-			};
-
-			skin_npu {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&msm_npu THERMAL_MAX_LIMIT
-							THERMAL_MAX_LIMIT>;
-			};
-
-			skin_modem_skin_cdev0 {
-				trip = <&modem_skin_trip0>;
-				cooling-device = <&modem_skin 1 1>;
-			};
-
-			skin_modem_skin_cdev1 {
-				trip = <&modem_skin_trip1>;
-				cooling-device = <&modem_skin 2 2>;
-			};
-
-			skin_modem_skin_cdev2 {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&modem_skin 3 3>;
-			};
-
-			skin_modem_cdev0 {
-				trip = <&modem_skin_trip2>;
-				cooling-device = <&modem_pa 1 1>;
-			};
-
-			skin_modem_cdev1 {
-				trip = <&skin_batt_modem_trip>;
-				cooling-device = <&modem_pa 2 2>;
-			};
-
-			skin_modem_cdev2 {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&modem_pa 3 3>;
-			};
-
-			modem_pa_fr1_cdev0 {
-				trip = <&modem_skin_trip2>;
-				cooling-device = <&modem_pa_fr1 1 1>;
-			};
-
-			modem_pa_fr1_cdev1 {
-				trip = <&skin_batt_modem_trip>;
-				cooling-device = <&modem_pa_fr1 2 2>;
-			};
-
-			modem_pa_fr1_cdev2 {
-				trip = <&cx_emer_trip>;
-				cooling-device = <&modem_pa_fr1 3 3>;
-			};
-
-			batt_cdev0 {
-				trip = <&skin_batt_trip0>;
-				cooling-device = <&pm7250b_charger 8 8>;
-			};
-
-			batt_cdev1 {
-				trip = <&skin_batt_modem_trip>;
-				cooling-device = <&pm7250b_charger 12 12>;
-			};
-
-			batt_cdev2 {
-				trip = <&skin_batt_trip2>;
-				cooling-device = <&pm7250b_charger 14 14>;
-			};
-
-			batt_cdev3 {
-				trip = <&skin_batt_trip3>;
-				cooling-device = <&pm7250b_charger 16 16>;
-			};
-
-			batt_cdev4 {
-				trip = <&skin_batt_trip4>;
-				cooling-device = <&pm7250b_charger 18 18>;
 			};
 		};
 	};
