--- a/qcom/qg-batterydata-atl436186020H_3780mAh.dtsi
+++ b/qcom/qg-batterydata-atl436186020H_3780mAh.dtsi
@@ -1,36 +1,28 @@
 qcom,ATL436186_020H_3780mAh {
 	/* ATL436186_020H_3780mAh_Averaged_MasterSlave_Feb25th2020 */
-	qcom,max-voltage-uv = <4400000>;
-	qcom,fg-cc-cv-threshold-uv = <4400000>;
-	qcom,fastchg-current-ma = <10000>;
-	qcom,batt-id-kohm = <39>;
+	qcom,max-voltage-uv = <4480000>;
+	qcom,fg-cc-cv-threshold-uv = <4450000>;
+	qcom,fastchg-current-ma = <6000>;
+	qcom,batt-id-kohm = <100>;
 	qcom,battery-beta = <4250>;
 	qcom,battery-therm-kohm = <100>;
 	qcom,battery-type =
 			"ATL436186_020H_3780mAh_Averaged_MasterSlave_Feb25th2020";
 	qcom,qg-batt-profile-ver = <100>;
 
-	qcom,jeita-fcc-ranges = <0  100  1890000
-				101 200  3780000
-				201 420  10000000
-				421 434  8000000
-				435 450  7000000
-				451 550  1890000>;
+	qcom,jeita-fcc-ranges = <(-100)  0   472000
+				1  50  994000
+				51  100  2360000
+				101 150  3776000
+				151 450  6000000
+				451 580  2360000>;
+	qcom,jeita-fv-ranges = <(-100)  0   4450000
+				1   50  4450000
+				51  100  4450000
+				101 150  4450000
+				151 450  4480000
+				451 580  4200000>;
 
-	qcom,jeita-fv-ranges = <0   100  4400000
-				101 200  4400000
-				201 420  4400000
-				421 434  4400000
-				435 450  4400000
-				451 550  4050000>;
-
-	qcom,step-chg-ranges = <3500000  4000000  10000000
-				4000001  4200000  8000000
-				4200001  4400000  6000000>;
-	qcom,ocv-based-step-chg;
-
-	/* Rise-Hys = 1 DeciDegC, Fall-Hys=10 deciDegC */
-	qcom,qcom,step-jeita-hysteresis = <1 10>;
 	/* COOL = 10 degc, WARM = 45 degC */
 	qcom,jeita-soft-thresholds = <0x4ccc 0x20b8>;
 	/* COLD = 0 degC, HOT = 55 degC*/
