ARM64: configs: gauguin: Enable CONFIG_FINGERPRINT_GOODIX
Signed-off-by: hridaya <hridaya@pixelos.net>
Change-Id: I6a90a4dbc5e882ea5f79808437d7e1c840c6be39

--- a/arch/arm64/configs/gauguin_defconfig
+++ b/arch/arm64/configs/gauguin_defconfig
@@ -2340,7 +2340,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_RMI4_CORE is not set
 CONFIG_FINGERPRINT_FP_VREG_CONTROL=y
 CONFIG_INPUT_FINGERPRINT=y
-# CONFIG_FINGERPRINT_GOODIX is not set
+CONFIG_FINGERPRINT_GOODIX=y
 
 #
 # Hardware I/O ports
